# sts2-mod-manager

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASING.md  index.html  package-lock.json  package.json  smoke-concurrency-verify.txt  vitest.config.ts
.claude/: settings.local.json
.github/: dependabot.yml
.github/release-warnings/: linux.md  macos.md  windows.md
.github/workflows/: auto-release.yml  build.yml  ci.yml  claude-autofix-merge.yml  claude-autofix-qa.yml  claude-autofix.yml  claude.yml  conflict-watcher.yml  dependabot-label.yml  dev-build-cleanup.yml  dev-build-request.yml  nexus-find-thread.yml  nexus-introspect.yml  nexus-republish.yml  nexus-triage.yml  nexus-watchdog-check.yml  nexus-watchdog.yml  release-suggester.yml  release.yml
changelog.d/: README.md  added-109-russian-arabic.md  added-110-modpack-enable-disable-all.md  added-110-open-this-mod-folder.md  added-111-light-theme.md  added-114-inactive-modpack-hint.md  added-114-rename-modpack.md  added-114-tag-sort-filter.md  added-114-wizard-detail.md  added-116-non-github-feedback.md  added-119-display-sizing.md  added-150-no-tags-filter.md  added-151-auto-add-setting.md  added-162-backup-retention-setting.md  added-170-modpack-sorting.md  added-170-recent-modpacks-home.md  added-170-share-notes-links.md  added-170-unified-pack-search.md  added-173-hide-customize-entry.md  added-56-kebab-autodetect.md  added-56-mod-packs.md  added-display-text-size.md  added-global-version-cleanup.md  added-modpack-visual-sort.md  added-navigation-layout.md  added-steam-workshop-support.md  changed-135-modpack-sharing.md  changed-138-ux-clarity.md  changed-149-nexus-effective-version.md  changed-164-missing-bundles-guidance.md  changed-170-browse-labels.md  changed-170-installer-publisher.md  changed-home-recent-modpacks.md  changed-main-feedback-backups-switching.md  changed-mod-version-lifecycle.md  changed-modpack-drift-copy.md  changed-remove-nexus-feedback.md  changed-skip-unchanged-rebundles.md  changed-windows-defender-guidance.md  fixed-103-data-safety.md  (+125 more)
changelog.i18n/: README.md
changelog.i18n/ar/: added-162-backup-retention-setting.md  added-170-modpack-sorting.md  added-170-recent-modpacks-home.md  added-170-share-notes-links.md  added-170-unified-pack-search.md  added-173-hide-customize-entry.md  added-display-text-size.md  added-global-version-cleanup.md  added-modpack-visual-sort.md  added-navigation-layout.md  added-steam-workshop-support.md  changed-164-missing-bundles-guidance.md  changed-170-browse-labels.md  changed-170-installer-publisher.md  changed-home-recent-modpacks.md  changed-main-feedback-backups-switching.md  changed-mod-version-lifecycle.md  changed-modpack-drift-copy.md  changed-remove-nexus-feedback.md  changed-skip-unchanged-rebundles.md  changed-windows-defender-guidance.md  fixed-156-incompatible-modpack-mods.md  fixed-162-kebab-menu-stacking.md  fixed-164-share-upload-retries.md  fixed-165-share-includes-all-mod-files.md  fixed-170-beta-version-updates.md  fixed-170-drift-banner-races.md  fixed-170-own-pack-update-flag.md  fixed-170-reshare-skips-unchanged.md  fixed-174-pack-counter-drift.md  fixed-174-repair-keeps-old-install.md  fixed-174-share-reinstalled-mods.md  fixed-200-modpack-membership.md  fixed-activation-overlay-name.md  fixed-active-modpack-count.md  fixed-bottom-kebab-menu.md  fixed-bundle-duplicate-runtime-ids.md  fixed-create-modpack-loading-race.md  fixed-failed-launch-mod-storage.md  fixed-failed-update-skip.md  (+74 more)
changelog.i18n/ru/: added-162-backup-retention-setting.md  added-170-modpack-sorting.md  added-170-recent-modpacks-home.md  added-170-share-notes-links.md  added-170-unified-pack-search.md  added-173-hide-customize-entry.md  added-display-text-size.md  added-global-version-cleanup.md  added-modpack-visual-sort.md  (+105 more)
docs/: _config.yml  i.html  index.html  modpack-view-redesign-brief.md  robots.txt  sitemap.xml
qa/: README.md  coverage-matrix.md  interaction-inventory.md  walkthrough-findings.md  whats-left.md
registry/: README.md  latest_versions.json  registry.json
scripts/: _nexus_fetch.py  changelog-fragments.mjs  changelog-fragments.test.mjs  changelog-translations.mjs  changelog-translations.test.mjs  ci-changes.mjs  ci-changes.test.mjs  dev-build-stamp.mjs  dev-build-stamp.test.mjs  make-dev-icon.mjs  make-dev-icon.test.mjs  nexus-publish-release.mjs  nexus-publish-release.test.mjs  nexus-triage-prompt.md  nexus-triage-state.json  nexus-triage.mjs  nexus-triage.test.mjs  patch-appimage-apprun.sh  portable-README.txt  publish-updater.sh  qa-coverage-matrix.mjs  qa-coverage-matrix.test.mjs  qa-gate-demo.mjs  qa-gate-demo.test.mjs  qa-impact.mjs  qa-impact.test.mjs  qa-owners.mjs  qa-owners.test.mjs  qa-pipeline.mjs  qa-pipeline.test.mjs  release-windows-installer-policy.test.mjs  release.sh  run-nexus-triage-local.bat  sum.mjs  sum.test.mjs  test-launch-support-openers.mjs  test-updater-signature.sh  test-window-chrome.mjs  translate-changelog.mjs  translate-changelog.test.mjs
sharing-service/: package-lock.json  package.json  tsconfig.json  wrangler.toml
src/: App.test.tsx  App.tsx  _ci_gate_negative.test.ts  main.tsx  styles.css  types.ts
src-tauri/: .tauriignore  Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_update.rs  backup.rs  bug_report.rs  dev_builds.rs  download.rs  downloads_watcher.rs  error.rs  export_import.rs  external_open.rs  fs_safety.rs  game.rs  http.rs  launch_diagnostics.rs  lib.rs  main.rs  mod_sources.rs  mod_versions.rs  modpack_browser.rs  mods.rs  nexus.rs  profiles.rs  qa_cassette.rs  quick_add.rs  sharing.rs  state.rs  subscriptions.rs  updater.rs
src-tauri/src/mods/: bundle.rs  install.rs  mod.rs  scan.rs  state.rs  workshop.rs
src-tauri/src/profiles/: apply.rs  crud.rs  drift.rs  membership.rs  mod.rs
src-tauri/src/sharing/: code.rs  github.rs  install.rs  mod.rs  upload.rs
src-tauri/tests/: active_profile_after_apply.rs  log_severity.rs  qa_cassette.rs  qa_scenarios.rs
(+444 files in other folders)
