[package]
name = "sts2-mod-manager"
version = "1.3.7"
description = "STS2 Mod Manager - A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "sts2_mod_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# Reroutes outbound GitHub + Nexus HTTP calls to disk fixtures under
# `$STS2_CASSETTE_DIR`. Used only by the QA WebDriver harness so the
# audit / update / subscription specs can run deterministically without
# burning rate limits or coupling to upstream state. Never enabled for
# shipped builds. See `qa/runner/README.md` and `src/qa_cassette.rs`.
qa-cassette = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
# Routes `sts2mm://import/<owner>/<code>` URLs into the install flow so
# friends can share clickable links in Discord/etc. The link opens the
# manager (or focuses it if already running) and shows the same install-
# confirm dialog the manual share-code paste flow uses, with smart handling
# for the "user already has this pack" case.
tauri-plugin-deep-link = "2"
# Required companion to tauri-plugin-deep-link on Windows + Linux: when
# the user clicks a `sts2mm://...` link the OS launches a NEW process
# with the URL in argv. Without this plugin, every click spawns a fresh
# manager window and the existing instance never sees the URL.
# tauri-plugin-single-instance intercepts the second launch, forwards
# its argv to the first instance via IPC, and lets the existing window
# come forward and route the URL through `on_open_url`.
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
sha2 = "0.10"
zip = "2"
# Multi-format archive support. STS2 mods get shared as .zip most of the
# time but Patreon/Discord drops sometimes use .7z (smaller) or .rar (older
# packagers); without these the install gives users a "not a supported
# archive" error and they have to extract + repack manually. See user
# feedback batch (May 2026) and docs/superpowers/specs/2026-05-12-feedback-fixes-design.md.
#
# sevenz-rust2: pure-Rust 7z decompressor. No system lib.
# unrar: thin wrapper over RARLab's official decompression C source
# (compiled statically via the sister `unrar_sys` crate). RARLab's
# license permits decompression; the Rust wrapper layer is MIT/Apache.
sevenz-rust2 = "0.21"
unrar = "0.5"
# Promoted from dev-dep so the install pipeline can stage 7z/rar
# extractions to a self-cleaning temp dir before re-packaging them as a
# zip for the existing install_mod_from_zip pipeline to consume.
tempfile = "3"
dirs = "5"
url = "2"
thiserror = "2"
log = "0.4"
fern = { version = "0.7", features = ["date-based"] }
walkdir = "2"
notify = "7"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
open = "5"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
futures = "0.3"
regex = "1"
semver = "1"
base64 = "0.22"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

# Windows: read Steam's install path out of the registry so auto-detect
# works for users who installed Steam to a non-default drive (D:, E:, etc.).
# The hardcoded Program Files paths miss those, which was the primary
# cause of "Auto-detect always fails" reports in v1.1.x.
[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]
tempfile = "3"
