[package]
name = "sts2-mod-manager"
version = "1.8.4"
description = "STS2 Mod Manager - A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "sts2_mod_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# Reroutes outbound GitHub + Nexus HTTP calls to disk fixtures under
# `$STS2_CASSETTE_DIR`. Used only by the QA WebDriver harness so the
# audit / update / subscription specs can run deterministically without
# burning rate limits or coupling to upstream state. Never enabled for
# shipped builds. See `qa/runner/README.md` and `src/qa_cassette.rs`.
qa-cassette = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
# Routes `sts2mm://import/<owner>/<code>` URLs into the install flow so
# friends can share clickable links in Discord/etc. The link opens the
# manager (or focuses it if already running) and shows the same install-
# confirm dialog the manual share-code paste flow uses, with smart handling
# for the "user already has this pack" case.
tauri-plugin-deep-link = "2"
# Required companion to tauri-plugin-deep-link on Windows + Linux: when
# the user clicks a `sts2mm://...` link the OS launches a NEW process
# with the URL in argv. Without this plugin, every click spawns a fresh
# manager window and the existing instance never sees the URL.
# tauri-plugin-single-instance intercepts the second launch, forwards
# its argv to the first instance via IPC, and lets the existing window
# come forward and route the URL through `on_open_url`.
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
# reqwest 0.13 made `query`/`form` opt-in features and flipped the default TLS
# backend to rustls. We pin native-tls (default-features = false + re-adding the
# previous defaults: charset/http2/system-proxy) so the shipped app's HTTPS/cert
# behavior is unchanged from the 0.12 line, and add `query` for the calls in
# download.rs / sharing/github.rs that use RequestBuilder::query().
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "query", "charset", "http2", "system-proxy", "native-tls"] }
sha2 = "0.11"
hex = "0.4"
zip = "8"
# Multi-format archive support. STS2 mods get shared as .zip most of the
# time but Patreon/Discord drops sometimes use .7z (smaller) or .rar (older
# packagers); without these the install gives users a "not a supported
# archive" error and they have to extract + repack manually. See user
# feedback batch (May 2026) and docs/superpowers/specs/2026-05-12-feedback-fixes-design.md.
#
# sevenz-rust2: pure-Rust 7z decompressor. No system lib.
# unrar: thin wrapper over RARLab's official decompression C source
# (compiled statically via the sister `unrar_sys` crate). RARLab's
# license permits decompression; the Rust wrapper layer is MIT/Apache.
sevenz-rust2 = "0.21"
unrar = "0.5"
# Promoted from dev-dep so the install pipeline can stage 7z/rar
# extractions to a self-cleaning temp dir before re-packaging them as a
# zip for the existing install_mod_from_zip pipeline to consume.
tempfile = "3"
dirs = "6"
url = "2"
thiserror = "2"
log = "0.4"
fern = { version = "0.7", features = ["date-based"] }
walkdir = "2"
notify = "8"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
open = "5"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
futures = "0.3"
regex = "1"
semver = "1"
base64 = "0.22"
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
# Used by sharing.rs::upload_release_asset to safely encode asset
# filenames into the `?name=<...>` query param of GitHub's release-asset
# upload endpoint. Pure-Rust, no transitive bloat — smaller than pulling
# in a full url-builder.
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }

# Windows: read Steam's install path out of the registry so auto-detect
# works for users who installed Steam to a non-default drive (D:, E:, etc.).
# The hardcoded Program Files paths miss those, which was the primary
# cause of "Auto-detect always fails" reports in v1.1.x.
[target.'cfg(windows)'.dependencies]
winreg = "0.56"

[dev-dependencies]
tempfile = "3"
# In-process HTTP server for testing sharing.rs upload paths. The
# qa-cassette layer (src/qa_cassette.rs) is GET-only by design — wiremock
# covers POST/PUT/PATCH/DELETE so the release uploader has E2E coverage
# without burning real GitHub rate limits.
wiremock = "0.6"
